--- a/src/02-form.html
+++ b/src/02-form.html
@@ -9,7 +9,8 @@
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 3</h1>
+
+      <script type="module" src="./02-form.html"></script>
     </section>
   </body>
 </html>
